--- a/src/components/misc/License.astro
+++ b/src/components/misc/License.astro
@@ -19,12 +19,12 @@ const licenseConf = licenseConfig
 const postUrl = decodeURIComponent(Astro.url.toString())
 ---
 <div class=`relative transition overflow-hidden bg-[var(--license-block-bg)] py-5 px-6 ${className}`>
-    <div class="transition font-bold text-black/75 dark:text-white/75">
+    <!-- <div class="transition font-bold text-black/75 dark:text-white/75">
         {title}
     </div>
     <a href={postUrl} class="link text-[var(--primary)]">
         {postUrl}
-    </a>
+    </a> -->
     <div class="flex gap-6 mt-2">
         <div>
             <div class="transition text-black/30 dark:text-white/30 text-sm">{i18n(I18nKey.author)}</div>
