--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -49,8 +49,8 @@ rainbow-dark = linear-gradient(to right, oklch(0.70 0.10 0), oklch(0.70 0.10 30)
 :root
   --radius-large 1rem
 
-  --banner-height-home 65vh
-  --banner-height 35vh
+  --banner-height-home 60vh
+  --banner-height 40vh
 
   --content-delay 150ms
 
@@ -65,8 +65,8 @@ color_set({
   --btn-regular-bg-hover: oklch(0.9 0.05 var(--hue)) oklch(0.38 0.04 var(--hue))
   --btn-regular-bg-active: oklch(0.85 0.08 var(--hue)) oklch(0.43 0.045 var(--hue))
 
-  --btn-plain-bg-hover: oklch(0.95 0.025 var(--hue)) oklch(0.30 0.035 var(--hue))
-  --btn-plain-bg-active: oklch(0.98 0.01 var(--hue)) oklch(0.27 0.025 var(--hue))
+  --btn-plain-bg-hover: oklch(0.95 0.025 var(--hue)) oklch(0.17 0.017 var(--hue))
+  --btn-plain-bg-active: oklch(0.98 0.01 var(--hue)) oklch(0.19 0.017 var(--hue))
 
   --btn-card-bg-hover: oklch(0.98 0.005 var(--hue)) oklch(0.3 0.03 var(--hue))
   --btn-card-bg-active: oklch(0.9 0.03 var(--hue)) oklch(0.35 0.035 var(--hue))
@@ -114,12 +114,6 @@ color_set({
 
   --display-light-icon: 1 0
   --display-dark-icon: 0 1
-
-  --admonitions-color-tip: oklch(0.7 0.14 180) oklch(0.75 0.14 180)
-  --admonitions-color-note: oklch(0.7 0.14 250) oklch(0.75 0.14 250)
-  --admonitions-color-important: oklch(0.7 0.14 310) oklch(0.75 0.14 310)
-  --admonitions-color-warning: oklch(0.7 0.14 60) oklch(0.75 0.14 60)
-  --admonitions-color-caution: oklch(0.6 0.2 25) oklch(0.65 0.2 25)
 })
 
 
@@ -177,7 +171,7 @@ color_set({
 
 
 </style>
-<style is:global lang="scss">
+<style is:global>
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -192,21 +186,17 @@ color_set({
     .card-shadow {
         @apply drop-shadow-[0_2px_4px_rgba(0,0,0,0.005)]
     }
-    .expand-animation {
-        @apply relative before:ease-out before:transition active:bg-none hover:before:bg-[var(--btn-plain-bg-hover)] active:before:bg-[var(--btn-plain-bg-active)] z-0
-        before:absolute before:rounded-[inherit] before:inset-0 before:scale-[0.85] hover:before:scale-100 before:-z-10
-    }
     .link {
-        @apply transition rounded-md p-1 -m-1 expand-animation;
+        @apply transition hover:bg-[var(--link-hover)] active:bg-[var(--link-active)] rounded-md p-1 -m-1;
     }
     .link-lg {
-        @apply transition rounded-md p-1.5 -m-1.5 expand-animation;
+        @apply transition hover:bg-[var(--link-hover)] active:bg-[var(--link-active)] rounded-md p-1.5 -m-1.5;
     }
     .float-panel {
         @apply top-[5.25rem] rounded-[var(--radius-large)] overflow-hidden bg-[var(--float-panel-bg)] transition shadow-xl dark:shadow-none
     }
-    .float-panel-closed {
-        @apply -translate-y-1 opacity-0 pointer-events-none
+    .float-panel.closed {
+        @apply top-[4.75rem] opacity-0 pointer-events-none
     }
     .search-panel mark {
         @apply bg-transparent text-[var(--primary)]
@@ -220,17 +210,8 @@ color_set({
         @apply pointer-events-none text-black/10 dark:text-white/10
     }
     .btn-plain {
-        @apply transition relative flex items-center justify-center bg-none
-        text-black/75 hover:text-[var(--primary)] dark:text-white/75 dark:hover:text-[var(--primary)];
-        &:not(.scale-animation) {
-            @apply hover:bg-[var(--btn-plain-bg-hover)] active:bg-[var(--btn-plain-bg-active)]
-        }
-        &.scale-animation {
-            @apply expand-animation;
-            &.current-theme-btn {
-                @apply before:scale-100 before:opacity-100 before:bg-[var(--btn-plain-bg-hover)] text-[var(--primary)]
-            }
-        }
+        @apply transition flex items-center justify-center bg-none hover:bg-[var(--btn-plain-bg-hover)] active:bg-[var(--btn-plain-bg-active)]
+        text-black/75 hover:text-[var(--primary)] dark:text-white/75 dark:hover:text-[var(--primary)]
     }
     .btn-regular {
         @apply transition flex items-center justify-center bg-[var(--btn-regular-bg)] hover:bg-[var(--btn-regular-bg-hover)] active:bg-[var(--btn-regular-bg-active)]
@@ -258,28 +239,11 @@ color_set({
         @apply text-black/25 dark:text-white/25
     }
 
-    html.is-changing .transition-swup-fade {
+    html.is-changing .transition-fade {
         @apply transition-all duration-200
     }
-    html.is-animating .transition-swup-fade {
+    html.is-animating .transition-fade {
         @apply opacity-0 translate-y-4
-    }
-
-    /* PhotoSwipe */
-    .pswp__button {
-        @apply transition bg-black/40 hover:bg-black/50 active:bg-black/60 flex items-center justify-center mr-0 w-12 h-12 !important;
-    }
-    .pswp__button--zoom, .pswp__button--close {
-        @apply mt-4 rounded-xl active:scale-90 !important;
-    }
-    .pswp__button--zoom {
-        @apply mr-2.5 !important;
-    }
-    .pswp__button--close {
-        @apply mr-4 !important;
-    }
-    .custom-md img, #post-cover img {
-        @apply cursor-zoom-in
     }
 }
 
@@ -298,7 +262,7 @@ color_set({
     animation: 300ms fade-in-up;
     animation-fill-mode: forwards;
 }
-#navbar {
+#top-row {
     animation-delay: 0ms
 }
 #sidebar {
@@ -308,9 +272,6 @@ color_set({
     animation-delay: var(--content-delay);
 }
 #footer {
-    animation-delay: 400ms;
-}
-#banner-credit {
     animation-delay: 400ms;
 }
 
