--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -1,19 +1,18 @@
 ---
-import { formatDateToYYYYMMDD } from '../utils/date-utils'
-import { Icon } from 'astro-icon/components'
-import { i18n } from '../i18n/translation'
-import I18nKey from '../i18n/i18nKey'
-import { url } from '../utils/url-utils'
+import {formatDateToYYYYMMDD} from "../utils/date-utils";
+import { Icon } from 'astro-icon/components';
+import {i18n} from "../i18n/translation";
+import I18nKey from "../i18n/i18nKey";
 
 interface Props {
-  class: string
-  published: Date
-  tags: string[]
-  category: string
-  hideTagsForMobile?: boolean
+    class: string;
+    published: Date;
+    tags: string[];
+    category: string;
+    hideTagsForMobile: boolean;
 }
-const { published, tags, category, hideTagsForMobile = false } = Astro.props
-const className = Astro.props.class
+const {published, tags, category, hideTagsForMobile} = Astro.props;
+const className = Astro.props.class;
 ---
 
 <div class:list={["flex flex-wrap text-neutral-500 dark:text-neutral-400 items-center gap-4 gap-x-4 gap-y-2", className]}>
@@ -30,14 +29,14 @@ const className = Astro.props.class
     <div class="flex items-center">
         <div class="meta-icon"
         >
-            <Icon name="material-symbols:book-2-outline-rounded" class="text-xl"></Icon>
+            <Icon name="material-symbols:menu-rounded" class="text-xl"></Icon>
         </div>
-        <div class="flex flex-row flex-nowrap items-center">
-            <a href={url(`/archive/category/${category || 'uncategorized'}/`)} aria-label=`View all posts in the ${category} category`
+        <div class="flex flex-row flex-nowrap">
+            <div><a href=`/archive/category/${category || 'uncategorized'}` aria-label=`View all posts in the ${category} category`
                class="link-lg transition text-50 text-sm font-medium
                             hover:text-[var(--primary)] dark:hover:text-[var(--primary)] whitespace-nowrap">
                 {category || i18n(I18nKey.uncategorized)}
-            </a>
+            </a></div>
         </div>
     </div>
 
@@ -47,15 +46,16 @@ const className = Astro.props.class
         >
             <Icon name="material-symbols:tag-rounded" class="text-xl"></Icon>
         </div>
-        <div class="flex flex-row flex-nowrap items-center">
-            {(tags && tags.length > 0) && tags.map((tag, i) => (
-                <div class:list={[{"hidden": i == 0}, "mx-1.5 text-[var(--meta-divider)] text-sm"]}>/</div>
-                <a href={url(`/archive/tag/${tag}/`)} aria-label=`View all posts with the ${tag} tag`
+        <div class="flex flex-row flex-nowrap">
+            {(tags && tags.length > 0) && tags.map(tag => <div
+                    class="with-divider"
+            >
+                <a href=`/archive/tag/${tag}` aria-label=`View all posts with the ${tag} tag`
                    class="link-lg transition text-50 text-sm font-medium
                                 hover:text-[var(--primary)] dark:hover:text-[var(--primary)] whitespace-nowrap">
                     {tag}
                 </a>
-            ))}
+            </div>)}
             {!(tags && tags.length > 0) && <div class="transition text-50 text-sm font-medium">{i18n(I18nKey.noTags)}</div>}
         </div>
     </div>
