--- a/src/components/control/ButtonLink.astro
+++ b/src/components/control/ButtonLink.astro
@@ -1,12 +1,12 @@
 ---
 interface Props {
-  badge?: string
-  url?: string
-  label?: string
+    badge?: string
+    url?: string
+    label?: string
 }
-const { badge, url, label } = Astro.props
+const { badge, url, name } = Astro.props
 ---
-<a href={url} aria-label={label}>
+<a href={url} aria-label={name}>
     <button
         class:list={`
             w-full
